Корректировка css стилей

--- a/app/webroot/css/admin/admin.css
+++ b/app/webroot/css/admin/admin.css
@@ -1059,7 +1059,7 @@ a#scrollup {
   bottom: 20px;
   right: 30px;
   padding: 5px 10px;
-  background: #1c6cf2;
+  background: #dd2c00;
   color: #fff;
 }
 
