--- a/app/webroot/css/admin/admin.css
+++ b/app/webroot/css/admin/admin.css
@@ -235,10 +235,10 @@ ul#myTab
 		padding: .5em 0 .5em 0;
 		margin: 0 0 .5em 0;
 		background: #fff;
-		border-top: 0px solid #ddd;
-		border-left: 0px solid #ddd;
-		border-right: 0px solid #ddd;
-		border-bottom: 0px solid #ddd;
+		border-top: 1px solid #ddd;
+		border-left: 1px solid #ddd;
+		border-right: 1px solid #ddd;
+		border-bottom: 1px solid #ddd;
 	}
 	
 .nav-tabs > .active > a, .nav-tabs > .active > a:hover 
@@ -470,7 +470,7 @@ div#content table.contentTable th
 		padding: .9em;
 		margin: 0 auto;
 		background-color: transparent;
-		border-top: 1px solid #dee2e6;
+		border-top: 0px solid #dee2e6;
 		border-bottom: 2px solid #dee2e6;
 		border-top-left-radius: 0px;
 		border-top-right-radius: 0px;
@@ -619,6 +619,7 @@ div.error input
 
 .btn
 	{
+		border-radius: 0;
 		margin: 0 5px 0 0;
 	}
 	
