--- a/app/webroot/css/admin/admin.css
+++ b/app/webroot/css/admin/admin.css
@@ -382,6 +382,12 @@ div.radio input[type="radio"]
 
 /* Tables */
 
+label,
+th
+	{
+		font-weight: 500;
+	}
+
 div#content table.contentTable
 	{
 		width: 100%;
