--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -271,7 +271,7 @@ padding-left: 0;
 
 .btn,
 .btn.active {
-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
 transition: all 0.4s;
 }
 
