--- a/app/webroot/css/admin/admin.css
+++ b/app/webroot/css/admin/admin.css
@@ -636,7 +636,7 @@ div.error input
 	{
 		border-radius: 0;
 		margin: 0 5px 0 0;
-		box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+		box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 		transition: all 0.4s;
 	}
 	
