--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -1162,7 +1162,7 @@ pre {
     overflow-y: scroll;
     overflow-x: hidden;
     background: #fff; 
-    box-shadow: 0 1px 8px rgba(0,0,0,.23),0 1px 8px rgba(0,0,0,.16);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 #searchPreview table {
