--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -290,7 +290,7 @@ padding-left: 0;
 
 .btn,
 .btn.active {
-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
 transition: all 0.4s;
 }
 
@@ -299,7 +299,7 @@ transition: all 0.4s;
 .btn:focus {
 background-color: #dd2c00;
 border: 1px solid #dd2c00;
-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
 transition: all 0.4s;
 color: #fff;
 }
@@ -772,9 +772,9 @@ div#spinner {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
+  -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
+  -moz-box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
 	}
 
 .shop-products .thumbnail .image {
@@ -1058,9 +1058,9 @@ div#spinner {
   padding: 0;
   margin: 0;
   overflow: hidden;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
+  -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
+  -moz-box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
@@ -1162,7 +1162,7 @@ pre {
 
 #searchPreview table {
     border: 1px solid #e5e5e5;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
     background: #fff; 
     height: 300px;
     overflow-y: scroll;
