--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -292,6 +292,7 @@ padding-left: 0;
 box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
 transition: all 0.4s;
 font-size: 16px;
+padding: 5px 12px;
 }
 
 .btn:hover,
