--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -30,6 +30,8 @@ select:focus {
 .row.content {
   background: #fff;
   padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 1px 8px rgba(0,0,0,.23),0 1px 8px rgba(0,0,0,.16);  
   border-radius: 0px;
   border: 0;
 }
